Add a report on which people have mentored specs recently.
This currently treats any change to the feature as the mentor having
done some work, which isn't correct, but it should still work to give us
a rough picture of people's activity.
