# gen/js/chromestatus-openapi/src/models/index.ts
@@ -3,4 +3,6 @@
 export * from './ComponentUsersRequest';
 export * from './ComponentsUser';
 export * from './ComponentsUsersResponse';
+export * from './FeatureLink';
 export * from './OwnersAndSubscribersOfComponent';
+export * from './SpecMentor';
