# gen/py/chromestatus_openapi/chromestatus_openapi/models/__init__.py
@@ -3,4 +3,6 @@
 from chromestatus_openapi.models.component_users_request import ComponentUsersRequest
 from chromestatus_openapi.models.components_user import ComponentsUser
 from chromestatus_openapi.models.components_users_response import ComponentsUsersResponse
+from chromestatus_openapi.models.feature_link import FeatureLink
 from chromestatus_openapi.models.owners_and_subscribers_of_component import OwnersAndSubscribersOfComponent
+from chromestatus_openapi.models.spec_mentor import SpecMentor
